The Search area on the Search bar on the Home page now takes up more space on mobile and Fixed Minor issue with WorkshopItem Modal

--- a/src/Website/Client/wwwroot/css/app.css
+++ b/src/Website/Client/wwwroot/css/app.css
@@ -97,3 +97,20 @@ td {
     top: calc(50% - 1rem)!important;
     bottom: unset!important;
 }
+
+.mobile-only {
+    display: none;
+}
+
+.desktop-only {
+    display: unset;
+}
+
+@media (max-width: 575px) {
+    .mobile-only {
+        display: unset!important;
+    }
+    .desktop-only {
+        display: none!important;
+    }
+}
